--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-modal": "^3.11.2"
+    "react-modal": "^3.11.2",
+    "react-modal-customizable": "^1.2.2"
   }
 }
