--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.0",
     "next": "10.0.1",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.11.3",
     "react-modal": "^3.11.2",
     "react-modal-customizable": "^1.2.2"
   }
