--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.3",
     "react-modal": "^3.11.2",
-    "react-modal-customizable": "^1.2.2"
+    "react-modal-customizable": "^1.2.2",
+    "react-router-dom": "^5.2.0"
   }
 }
